# scrapy

./: .gitignore  main.py  pyproject.toml
src/: display.py  processor.py
src/utils/: backup.py  config.py  db_manager.py  drop.py
