[project]
name = "scrapy"
version = "0.1.0"
description = "Bookmarking tool to add URLs to an sqlite3 database and scrape their titles"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas",
    "beautifulsoup4",
    "certifi",
    "playwright",
    "pycurl",
    "pyperclip",
    "streamlit",
    "validators",
    "watchdog",
    "pandas-stubs~=2.3.3",
]

[project.scripts]
scrapy = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "main.py"]

[dev-dependencies]
dev = []

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = ["F401"]
